Blender crashes when clicking on 'render' in 'viewport shading' #36347

Closed
opened 2013-08-02 03:25:48 +02:00 by computer user · 11 comments

%%%--- Operating System, Graphics card ---

CPU - i7-3770 (3.9GHz; quad core 8 threads)
OS - Windows 7 Ultimate, 64 bit
GPU - GeForce GTX570 (1.2GB RAM onboard)
16GB system RAM

- Blender version with error, and version that worked ---

2.6.8, 2.6.8a - crash occurs in both of these versions.

2.6.7b - This feature is not available in this version. But, I've never had a crash doing anything with this version in the couple of months I've been using it.

- Short description of error ---

Blender 2.6.8x crashes when trying to use 'render' in the viewport shader (this is a new feature to 2.6.8x)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Unfortunately, it's random. Sometimes when I click 'render' in the viewport shader (see attachment) the program just stops and I get a "this program has stopped working" error/crash. I then have to click close. Once the app is re-opened and I open my work file, I can then click the button and it renders the viewport just fine. I suspect a memory leak?

I circled the button causing the issue so it's clear what I'm referring to.%%%

%%%--- Operating System, Graphics card --- CPU - i7-3770 (3.9GHz; quad core 8 threads) OS - Windows 7 Ultimate, 64 bit GPU - GeForce GTX570 (1.2GB RAM onboard) 16GB system RAM - Blender version with error, and version that worked --- 2.6.8, 2.6.8a - crash occurs in both of these versions. 2.6.7b - This feature is not available in this version. But, I've never had a crash doing anything with this version in the couple of months I've been using it. - Short description of error --- Blender 2.6.8x crashes when trying to use 'render' in the viewport shader (this is a new feature to 2.6.8x) - Steps for others to reproduce the error (preferably based on attached .blend file) --- Unfortunately, it's random. Sometimes when I click 'render' in the viewport shader (see attachment) the program just stops and I get a "this program has stopped working" error/crash. I then have to click close. Once the app is re-opened and I open my work file, I can then click the button and it renders the viewport just fine. I suspect a memory leak? I circled the button causing the issue so it's clear what I'm referring to.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Update:

I discovered that the 'render' button in the viewport shader that I'm referring to is actually available in version 2.67b as well, if I choose the "Cycles Render" method from the top menu header. I wasn't aware of this before and so I have no idea if this is related or what.

I'll go ahead and test this in the new version as well as the old to see if the crashes can be limited to the engine type etc.%%%

%%%Update: I discovered that the 'render' button in the viewport shader that I'm referring to is actually available in version 2.67b as well, if I choose the "Cycles Render" method from the top menu header. I wasn't aware of this before and so I have no idea if this is related or what. I'll go ahead and test this in the new version as well as the old to see if the crashes can be limited to the engine type etc.%%%

%%%So you are using Blender Internal render and enabling "Render" shading type crashes?

Any file or just some specific file? If so, upload the file so we can re-do the problem. %%%

%%%So you are using Blender Internal render and enabling "Render" shading type crashes? Any file or just some specific file? If so, upload the file so we can re-do the problem. %%%
Author

%%%Yes that's correct. I have attached the file that I was using when this happened.

Just keep in mind that the crash was random but generally occurred when I rendered it within the viewport.

Also, I don't continuously keep the viewport in 'render' mode. I will switch from wire to solid while I make changes and when I'm ready, I'll change to 'render' view. So it's a lot of back and forth between the render types. I do that because it's generally too slow to work solely in 'render' view with this particular scene.

%%%

%%%Yes that's correct. I have attached the file that I was using when this happened. Just keep in mind that the crash was random but generally occurred when I rendered it within the viewport. Also, I don't continuously keep the viewport in 'render' mode. I will switch from wire to solid while I make changes and when I'm ready, I'll change to 'render' view. So it's a lot of back and forth between the render types. I do that because it's generally too slow to work solely in 'render' view with this particular scene. %%%
Author

%%%I am uploading the same blend file in ZIP format because I didn't pack the photos I used for materials in the first. This may make a difference. I have to zip it because it would exceed the 5MB limit.

%%%

%%%I am uploading the same blend file in ZIP format because I didn't pack the photos I used for materials in the first. This may make a difference. I have to zip it because it would exceed the 5MB limit. %%%

%%%I couldn't redo any crash enabling rendered draw mode in this file and doing some other things in the UI at the same time. This was on OS X though, maybe it's Windows specific.

To be clear, you can get this file to crash just opening the file, and changing draw mode to rendered, no other operations or clicking in the user interface, just an immediate crash when doing that?%%%

%%%I couldn't redo any crash enabling rendered draw mode in this file and doing some other things in the UI at the same time. This was on OS X though, maybe it's Windows specific. To be clear, you can get this file to crash just opening the file, and changing draw mode to rendered, no other operations or clicking in the user interface, just an immediate crash when doing that?%%%

%%%I checked the file now as well, cannot reproduce a crash. Opening file, changing to Rendered mode. (Windows 7 x64, latest SVN). %%%

%%%I checked the file now as well, cannot reproduce a crash. Opening file, changing to Rendered mode. (Windows 7 x64, latest SVN). %%%
Author

%%%As I mentioned, it's random. It may not occur when you immediately switch to rendered mode, although is certainly has for me. It seems to occur when I'm working on the file and am switching back and forth between rendered and textured/solid mode.

Since random bugs are the most difficult to reproduce, it'll be tough to catch this bug. In the meantime, I'll try to reproduce it as best I can.

%%%

%%%As I mentioned, it's random. It may not occur when you immediately switch to rendered mode, although is certainly has for me. It seems to occur when I'm working on the file and am switching back and forth between rendered and textured/solid mode. Since random bugs are the most difficult to reproduce, it'll be tough to catch this bug. In the meantime, I'll try to reproduce it as best I can. %%%
Member

%%%Got crash with zipped file & address-sanitizer, r59089.

Steps to reproduce:

  1. Open zipped blend file
  2. Switch the viewport to rendered mode
  3. Switch the viewport back to textured mode. This should be done quickly, while it says "Raytree.. building". If blender started to render the first tile you won't get crash (I guess so). So debug build and asan/valgrind is a good thing here.

By doing this steps you will get a definite memory corruption (asan log attached)%%%

%%%Got crash with zipped file & address-sanitizer, r59089. Steps to reproduce: 1) Open zipped blend file 2) Switch the viewport to rendered mode 3) Switch the viewport back to textured mode. This should be done quickly, while it says "Raytree.. building". If blender started to render the first tile you won't get crash (I guess so). So debug build and asan/valgrind is a good thing here. By doing this steps you will get a definite memory corruption (asan log attached)%%%

%%%fixed r59335.%%%

%%%fixed r59335.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36347
No description provided.