fix [#36347] Blender crashes when clicking on 'render' in 'viewport shading'